--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -18,7 +18,7 @@
 }
 
 .active {
-  z-index: 2;
+  z-index: 5;
   left: 0;
 }
 
@@ -47,7 +47,7 @@
     position: absolute;
     top: 1rem;
     right: 1rem;
-    z-index: 3;
+    z-index: 6;
 }
 
 
