--- a/src/app/shared/content/content.component.scss
+++ b/src/app/shared/content/content.component.scss
@@ -50,10 +50,10 @@ header {
   padding: 0;
 }
 
-[md-fab]{
+[md-mini-fab]{
   position: absolute;
-  margin: -28px 1rem 0 0;
+  margin: -20px 1rem 0 0;
   color: white;
   right: 0;
-  z-index: 500;
+  z-index: 2;
 }
